# movie-finder

./: .env  .gitignore  Dockerfile  README.md  agent.py  agent_executor.py  auth.py  graph.py  langgraph.json  main.py  pyproject.toml  test.py  tools.py
setup/: get_wiki_plots.py  insert_vectors.py  load_wiki.py
