[project]
name = "movie-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "a2a-sdk>=0.2.7",
    "beautifulsoup4>=4.13.4",
    "langchain-openai>=0.3.19",
    "langgraph>=0.2.76",
    "langgraph-cli[inmem]>=0.1.71",
    "pinecone>=7.0.2",
    "requests>=2.32.4",
]
