[project]
name = "movie-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain-openai>=0.3.21",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.1",
    "pinecone>=7.0.2",
    "requests>=2.32.4",
]
